@@ -28,13 +28,15 @@
         </div>
         <div class="logo">Anas</div>
         <div class="nav-items">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#features">Feature</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#faq">FAQ</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
-            <li><a href="#blog">Blog</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Works</a></li>
+            <li><a href="">Contact</a></li>
         </div>
+        <!-- <div class="nav-logos">
+            <li><a href="">About</a></li>
+            <li><a href="">Works</a></li>
+            <li><a href="">Contact</a></li>
+        </div> -->
         <div class="cancel-icon">
             <span class="icon"><img src="img/icons/times-solid.svg" alt=""></span>
         </div>
@@ -45,7 +47,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 header-left">
-                    <h2>Hey, I'm a front-end developer.</h2>
+                    <h2>Hey, I'm a <span> front-end </span> developer.</h2>
                     <p>Hi, I'm Anas a freelance web front-end developer from Khartoum. I help brands turn their ideas
                         into high quality code.</p>
                     <div class="btn"><button>My Skills</button></div>
@@ -114,7 +116,7 @@
                         <h2>All Creative Works</h2>
                     </div>
                     <div class="col-6 portfolio-top-right">
-                        <p>Discover All Projects in GITHUB</p>
+                        <p>Discover All Projects in <a href="https://github.com/AnasAlwaleed00" target="_blank"> github ></a></p>
                     </div>
                 </div>
             </div>
@@ -123,7 +125,17 @@
                     <div class="col-3 proj">
                         <div class="proj-img">
                             <img src="img/proj-img.png" alt="">
+                            <div class="proj-hover">
+                                <p>Venus Website</p> 
+                                <div class="btn">
+                                    <button> <a href="fb.com" target="_blank">demo</a> </button>
+                                </div> 
+                                <div class="btn">
+                                    <button>github</button>
+                                </div> 
+                            </div>
                         </div>
+                        
                     </div>
 
                     <div class="col-3 proj">
@@ -147,6 +159,7 @@
                 </div>
             </div>
         </div>
+        <div class="portfolio-bg"></div>
     </section>
 
     <section class="about">
@@ -171,42 +184,43 @@
                 <div class="row">
                     <div class="col-2 skill">
                         <div class="skill-img">
-                            <img src="img/skills-html.png" alt="">
+                            <img src="img/icons/html-5.svg" alt="">
                         </div>
                     </div>
 
                     <div class="col-2 skill">
                         <div class="skill-img">
-                            <img src="img/skills-html.png" alt="">
+                            <img src="img/icons/css3.svg" alt="">
                         </div>
                     </div>
 
                     <div class="col-2 skill">
                         <div class="skill-img">
-                            <img src="img/skills-html.png" alt="">
+                            <img src="img/icons/sass.svg" alt="">
                         </div>
                     </div>
 
                     <div class="col-2 skill">
                         <div class="skill-img">
-                            <img src="img/skills-html.png" alt="">
+                            <img src="img/icons/javascript.svg" alt="">
                         </div>
                     </div>
 
                     <div class="col-2 skill">
                         <div class="skill-img">
-                            <img src="img/skills-html.png" alt="">
+                            <img src="img/icons/vue-js.svg" alt="">
                         </div>
                     </div>
 
                     <div class="col-2 skill">
                         <div class="skill-img">
-                            <img src="img/skills-html.png" alt="">
+                            <img src="img/icons/git.svg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="portfolio-bg"></div>
     </section>
 
     <section class="clients">
@@ -249,6 +263,19 @@
                 <div class="email">
                     <img src="img/icons/contact-mail.svg" alt="">
                     <p>anasalwaleed77@gmail.com</p>
+                </div>
+            </div>
+            <div class="contact-social">
+                <div class="social-icons">
+                    <div class="social-icon">
+                        <a href=""><img src="img/icons/github.svg" alt=""></a>
+                    </div>
+                    <div class="social-icon">
+                        <a href=""><img src="img/icons/twitter.svg" alt=""></a>
+                    </div>
+                    <div class="social-icon">
+                        <a href=""><img src="img/icons/facebook.svg" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
