@@ -3,14 +3,17 @@ const menuBtn = document.querySelector(".menu-icon span");
 const searchBtn = document.querySelector(".search-icon");
 const cancelBtn = document.querySelector(".cancel-icon");
 const items = document.querySelector(".nav-items");
+const items2 = document.querySelector(".nav-logos");
 
 menuBtn.onclick = () => {
     items.classList.add("active");
+    // items2.classList.add("active");
     menuBtn.classList.add("hide");
     cancelBtn.classList.add("show");
 }
 cancelBtn.onclick = () => {
     items.classList.remove("active");
+    // items2.classList.remove("active");
     menuBtn.classList.remove("hide");
     cancelBtn.classList.remove("show");
     cancelBtn.style.color = "#ff3d00";
