@@ -6,9 +6,12 @@
 .header-left {
     margin-top: 60px;
     h2 {
-        font-size: 80px;
+        font-size: 70px;
         font-weight: 700;
         color: $colorPrimary;
+        span{
+            color: $colorAccent;
+        }
     }
     p{
         color: #130F4980;
@@ -16,7 +19,7 @@
         margin-top: 20px;
     }
     button {
-        background-color: $colorPrimary;
+        background-color: $colorAccent;
         color: $colorWhite;
         border: none;
         padding: 12px 32px;
@@ -24,6 +27,10 @@
         border-radius: 10px;
         margin-top: 20px;
         font-weight: 500;
+        transition: all .4s;
+        &:hover {
+            background-color: $colorAccentDeep;
+        }
     }
 }
 .scroll-mouse {
