@@ -1,25 +1,116 @@
 .portfolio {
     margin-top: 120px;
+    padding-top: 60px;
+    padding-bottom: 120px;
+    position: relative;
     img {
         width: 100%;
     }
+    .portfolio-bg {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 70%;
+        background-color: #FFC6FF60;
+        z-index: -1;
+        border-radius: 20px 0 0 20px;
+    }
 }
+
 .portfolio-top {
     .row {
         align-items: flex-end;
+        justify-content: space-between;
     }
+
     .portfolio-top-left {
         p {
             color: #00000070;
             letter-spacing: 1.6px;
             font-weight: 700;
         }
+
         h2 {
             color: $colorPrimary;
             font-size: 50px;
         }
     }
+
+    .portfolio-top-right {
+        p {
+            text-align: end;
+            font-size: 20px;
+            color: $colorPrimary;
+
+            a {
+                text-transform: uppercase;
+                font-weight: 700;
+                color: #ff6dff;
+                &:hover {
+                    text-decoration: none;
+                }
+            }
+        }
+    }
 }
+
 .portfolio-projects {
     margin-top: 80px;
+
+    .proj {
+        .proj-img {
+            position: relative;
+            
+            &:hover .proj-hover{
+                visibility: visible;
+                opacity: 1;
+            }
+        }
+
+        .proj-hover {
+            transition: all .3s ease;
+            visibility: hidden;
+            opacity: 0;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #BDB2FF;
+            text-align: center;
+            padding: 10px 40px;
+            border-radius: 20px;
+            color: $colorWhite;
+            font-weight: 600;
+            font-size: 20px;
+
+            button {
+                background-color: transparent;
+                border: 2px solid #FFFFFC;
+                color: #FFFFFC;
+                padding: 2px 12px;
+                font-size: 18px;
+                border-radius: 5px;
+                margin-top: 10px;
+                &:focus {
+                    outline: none;
+                }
+                a {
+                    color: $colorWhite;
+                }
+            }
+        }
+    }
+}
+.portfolio-bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 70%;
+    background-color: #FFC6FF60;
+    z-index: -1;
+    border-radius: 20px 0 0 20px;
 }
