@@ -1,5 +1,9 @@
 $colorWhite: #ffffff;
 $colorBody: #F3F3F7;
-$colorPrimary: #130F49;
-$colorAccent: #5fc477;
+// $colorPrimary: #130F49;
+$colorPrimary: #264653;
+// $colorAccent: #5fc477;
+$colorAccent: #2A9D8F;
+$colorAccentDeep: #1d8377;
 $colorBlack: #000000;
+$colorText: #00000090;
